--- a/VideogameTrackerREST/src/main/resources/application.properties
+++ b/VideogameTrackerREST/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/videogamedb?useSSL=false&useLe
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=gamer
 spring.datasource.password=gamer
+
+
+spring.jmx.default-domain=EventTracker
